--- a/book-registry.html
+++ b/book-registry.html
@@ -38,9 +38,18 @@
         nav ul {
             list-style: none;
             display: flex;
-            justify-content: center;
+            justify-content: flex-start;
+            align-items: center;
             gap: 2rem;
             flex-wrap: wrap;
+        }
+
+        nav li:first-child {
+            margin-right: auto;
+        }
+
+        nav li:nth-child(2) {
+            margin-left: auto;
         }
 
         nav a {
@@ -49,6 +58,11 @@
             font-size: 0.95rem;
             transition: color 0.3s ease;
             position: relative;
+        }
+
+        nav li:first-child a {
+            font-size: 1.2rem;
+            font-weight: 700;
         }
 
         nav a:hover {
@@ -88,7 +102,7 @@
         }
 
         .books-header {
-            text-align: center;
+            text-align: left;
             margin-bottom: 3rem;
         }
 
@@ -100,50 +114,71 @@
         }
 
         .books-header p {
-            font-size: 1.1rem;
+            font-size: 1.25rem;
             color: #333333;
         }
 
+        .books-header a {
+            color: #333333;
+            text-decoration: none;
+            border-bottom: 1px solid rgba(51, 51, 51, 0.3);
+            transition: border-bottom-color 0.3s ease;
+        }
+
+        .books-header a:hover {
+            border-bottom-color: rgba(51, 51, 51, 0.6);
+        }
+
         .books-list {
-            display: flex;
-            flex-direction: column;
-            gap: 2rem;
+            padding: 0;
+            text-align: left;
         }
 
-        .book-item {
-            background-color: #ffffff;
-            border-radius: 12px;
-            padding: 2rem;
-            box-shadow: 0 2px 8px rgba(0, 0, 0, 0.05);
-            transition: transform 0.3s ease, box-shadow 0.3s ease;
+        .books-list ul {
+            list-style-type: none;
+            padding-left: 0;
         }
 
-        .book-item:hover {
-            transform: translateY(-4px);
-            box-shadow: 0 4px 16px rgba(0, 0, 0, 0.1);
+        .books-list li {
+            font-size: clamp(0.85rem, 1.5vw, 1rem);
+            color: #333333;
+            line-height: 1.6;
+            margin-bottom: 1.5rem;
         }
 
-        .book-item h2 {
+        .books-separator {
+            height: 1px;
+            background-color: #e0e0e0;
+            margin: 3rem 0;
+        }
+
+        .books-details {
+            padding: 0;
+            text-align: left;
+        }
+
+        .books-details ul {
+            list-style-type: none;
+            padding-left: 0;
+        }
+
+        .books-details li {
+            font-size: 1.1rem;
+            color: #333333;
+            line-height: 1.8;
+            margin-bottom: 2rem;
+        }
+
+        .books-details .book-title-author {
             font-size: clamp(1.5rem, 3vw, 2rem);
             font-weight: 700;
-            margin-bottom: 0.5rem;
+            margin-bottom: 0.75rem;
             color: #000000;
+            display: block;
         }
 
-        .book-item .book-author {
-            font-size: 0.95rem;
-            color: #666666;
-            margin-bottom: 1rem;
-        }
-
-        .book-item .book-rating {
-            font-size: 0.9rem;
-            color: #666666;
-            margin-bottom: 1rem;
-        }
-
-        .book-item .book-thoughts {
-            font-size: 1rem;
+        .books-details .book-description {
+            font-size: 1.1rem;
             color: #333333;
             line-height: 1.8;
         }
@@ -156,6 +191,16 @@
             font-size: 0.9rem;
             border-top: 1px solid #e0e0e0;
             margin-top: 4rem;
+        }
+
+        .contact-link a {
+            color: #000000;
+            text-decoration: none;
+            transition: text-decoration 0.3s ease;
+        }
+
+        .contact-link a:hover {
+            text-decoration: underline;
         }
 
         /* Mobile Responsive */
@@ -177,25 +222,27 @@
                 margin-bottom: 2rem;
             }
 
-            .book-item {
-                padding: 1.5rem;
-            }
         }
 
         @media (max-width: 480px) {
+            nav {
+                padding: 0.75rem 1rem;
+            }
+
             nav ul {
-                flex-direction: column;
-                align-items: center;
                 gap: 0.5rem;
+                font-size: 0.8rem;
+            }
+
+            nav a {
+                padding: 0.25rem 0.5rem;
             }
 
             main {
                 padding: 1.5rem 1.25rem;
+                margin-top: 60px;
             }
 
-            .book-item {
-                padding: 1.25rem;
-            }
         }
 
         /* Smooth fade-in animation */
@@ -210,7 +257,8 @@
             }
         }
 
-        .book-item {
+        .books-list,
+        .books-details {
             animation: fadeIn 0.6s ease-out;
         }
     </style>
@@ -218,34 +266,43 @@
 <body>
     <nav>
         <ul>
-            <li><a href="index.html">Home</a></li>
+            <li><a href="index.html"><strong>Ken</strong></a></li>
             <li><a href="blog.html">Blog</a></li>
+            <li><a href="now.html">Now</a></li>
             <li><a href="quotes.html">Quotes</a></li>
             <li><a href="book-registry.html" class="active">Book Registry</a></li>
-            <li><a href="now.html">Now</a></li>
         </ul>
     </nav>
 
     <main>
         <div class="books-header">
-            <h1>Book Registry</h1>
-            <p>Books read with ratings and personal thoughts</p>
+            <p>Books read, rated, and annotated with personal reflections</p>
+            <p>See my <a href="now.html">Now page</a> for what I'm currently reading</p>
         </div>
 
         <div class="books-list">
-            <div class="book-item">
-                <h2>Book Title</h2>
-                <div class="book-author">by Author Name</div>
-                <div class="book-rating">Rating: ★★★★☆</div>
-                <div class="book-thoughts">
-                    <p>Personal thoughts about this book...</p>
-                </div>
-            </div>
+            <ul>
+                <li>★★★★☆ — 2024-12-15 — <strong>Stranger in a Strange Land</strong> by Robert A. Heinlein</li>
+            </ul>
+        </div>
+
+        <div class="books-separator"></div>
+
+        <div class="books-details">
+            <ul>
+                <li>
+                    <span class="book-title-author"><strong>Stranger in a Strange Land</strong> by Robert A. Heinlein</span>
+                    <div class="book-description">Interesting and different POV on metaphysics, religion and bonding as human.</div>
+                </li>
+            </ul>
         </div>
     </main>
 
     <footer>
-        <p>&copy; 2025 Ken Gatera. All rights reserved.</p>
+        <div class="contact-link">
+            <p><a href="contact.html">Get In Touch</a></p>
+       </div>
+       <p>&copy; 2025 Ken Gatera. All rights reserved.</p>
     </footer>
 </body>
 </html>
